2008-01-26  Thomas Schwinge  <tschwinge@gnu.org>

	* patches/04-newlib-newlib-configure-ac.patch: Use ``readlink -f''
	instead of ``realpath''.

2008-01-25  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (newlib-configure-stamp): Add -fno-stack-protector
	to the configure invocation.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/getreent.c (reent_main): New
	variable.
	(reent_main_alloced): Likewise.
	(reent_key_destroy): Clear utcb[_L4_UTCB_THREAD_WORD0].
	(__getreent): If REENT_MAIN_ALLOCED is not true, then use
	REENT_MAIN.  Otherwise, use the slab.  Only initialize the key if
	we use the slab and then, only after we've initialized the new
	structure and stashed it in utcb[_L4_UTCB_THREAD_WORD0].

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/isatty.c: New file.
	* addon/newlib/libc/sys/hurd/Makefile.am (GENERAL_SOURCES): Add
	isatty.c.
	* Makefile.am (addon): Add newlib/libc/sys/hurd/isatty.c.

	* addon/newlib/libc/sys/hurd/sys/config.h (_LARGEFILE64_SOURCE):
	Don't define.
	(__LARGE64_FILES): Likewise.

	* addon/newlib/libc/sys/hurd/malloc.c: Include <sys/lock.h>
	(MLOCK_T): Define.
	(INITIAL_LOCK): Likewise.
	(ACQUIRE_LOCK): Likewise.
	(RELEASE_LOCK): Likewise.

	* addon/newlib/libc/sys/hurd/writer.c: Include <hurd/rm.h>.
	(_write_r): If FD is 1 or 2, then send the buffer to the console.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/malloc.c (HAVE_MREMAP): Define to 0.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/Makefile.am (GENERAL_SOURCES): Add
	lock.c.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am ($(srcdir)/newlib $(srcdir)/newlib-stamp): When
	extracting the tarball, remove the patch-applied stamps.
	($(addsuffix -applied,$(patch_files))): Depend on
	$(srcdir)/newlib, not $(srcdir)/newlib-stamp.

2008-01-22  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/Makefile.am: New file.